<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/open_socket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="handleClick"
            android:text="@string/open_socket"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="@id/line"
            app:layout_constraintTop_toTopOf="@id/line" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/close_socket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="handleClick"
            android:text="@string/close_socket"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@id/line"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/line" />

        <Button
            android:id="@+id/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="handleClick"
            android:text="@string/register"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="@id/line"
            app:layout_constraintTop_toBottomOf="@id/open_socket" />

        <Button
            android:id="@+id/unregister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="handleClick"
            android:text="@string/unregister"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@id/line"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/close_socket" />

        <Button
            android:id="@+id/get_mobile_signal_level"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="handleClick"
            android:text="@string/get_mobile_signal_level"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="@id/line"
            app:layout_constraintTop_toBottomOf="@id/register" />

        <Button
            android:id="@+id/get_wifi_signal_level"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="handleClick"
            android:text="@string/get_wifi_signal_level"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@id/line"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/unregister" />

        <Button
            android:id="@+id/bind_to_mobile_interface"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="handleClick"
            android:text="@string/bind_to_mobile_interface"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="@id/line"
            app:layout_constraintTop_toBottomOf="@id/get_mobile_signal_level" />

        <Button
            android:id="@+id/bind_to_wifi_interface"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="handleClick"
            android:text="@string/bind_to_wifi_interface"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@id/line"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/get_wifi_signal_level" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/get_available_net_interface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="handleClick"
        android:text="@string/get_available_net_interface"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <Button
        android:id="@+id/get_traffic_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="handleClick"
        android:text="@string/get_traffic_state"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/get_available_net_interface" />

    <Button
        android:id="@+id/test_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="handleClick"
        android:text="@string/test_website"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/get_traffic_state" />

    <TextView
        android:id="@+id/recv_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recv_msg"
        app:layout_constraintTop_toBottomOf="@id/test_website" />

    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recv_msg">
    </WebView>

</androidx.constraintlayout.widget.ConstraintLayout>